test/error/parser/struct-field-default-missing-colon.dsk
let S = struct
    x = (test)
end
